Styled socials grid

--- a/index.html
+++ b/index.html
@@ -38,15 +38,46 @@
 
     <!-- Follower Grid Start -->
     <div class="follower-grid">
+
       <div class="grid-item">
         <div class="social-tag">
           <img src="/images/icon-facebook.svg" alt="" />
           <h3>@nathanf</h3>
         </div>
-        <p class="social-count">1987</p>
-        <p>Followers</p>
-        <p class="social-increase"><span><img src="/images/icon-up.svg" /></span>12 Today</p>
+          <p class="social-count">1987</p>
+          <p class="social-followers">Followers</p>
+          <div class="social-increase">
+            <img src="/images/icon-up.svg" />
+            <p>12 Today</p>
+          </div>
       </div>
+
+      <div class="grid-item">
+        <div class="social-tag">
+          <img src="/images/icon-facebook.svg" alt="" />
+          <h3>@nathanf</h3>
+        </div>
+          <p class="social-count">1987</p>
+          <p class="social-followers">Followers</p>
+          <div class="social-increase">
+            <img src="/images/icon-up.svg" />
+            <p>12 Today</p>
+          </div>
+      </div>
+
+      <div class="grid-item">
+        <div class="social-tag">
+          <img src="/images/icon-facebook.svg" alt="" />
+          <h3>@nathanf</h3>
+        </div>
+          <p class="social-count">1987</p>
+          <p class="social-followers">Followers</p>
+          <div class="social-increase">
+            <img src="/images/icon-up.svg" />
+            <p>12 Today</p>
+          </div>
+      </div>
+
     </div>
     <!-- Follower Grid End -->
 
