Added content for second grid

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
     <!-- Nav End -->
 
     <!-- Follower Grid Start -->
-    <div class="follower-grid">
+    <div class="follower-grid grid">
 
-      <div class="grid-item">
+      <div class="grid-item facebook">
         <div class="social-tag">
           <img src="/images/icon-facebook.svg" alt="" />
           <h3>@nathanf</h3>
@@ -52,29 +52,42 @@
           </div>
       </div>
 
-      <div class="grid-item">
+      <div class="grid-item twitter">
         <div class="social-tag">
-          <img src="/images/icon-facebook.svg" alt="" />
+          <img src="/images/icon-twitter.svg" alt="" />
           <h3>@nathanf</h3>
         </div>
-          <p class="social-count">1987</p>
+          <p class="social-count">1044</p>
           <p class="social-followers">Followers</p>
           <div class="social-increase">
             <img src="/images/icon-up.svg" />
-            <p>12 Today</p>
+            <p>99 Today</p>
           </div>
       </div>
 
-      <div class="grid-item">
+      <div class="grid-item instagram">
         <div class="social-tag">
-          <img src="/images/icon-facebook.svg" alt="" />
-          <h3>@nathanf</h3>
+          <img src="/images/icon-instagram.svg" alt="" />
+          <h3>@realnathanf</h3>
         </div>
-          <p class="social-count">1987</p>
+          <p class="social-count">11K</p>
           <p class="social-followers">Followers</p>
           <div class="social-increase">
             <img src="/images/icon-up.svg" />
-            <p>12 Today</p>
+            <p>1099 Today</p>
+          </div>
+      </div>
+
+      <div class="grid-item youtube">
+        <div class="social-tag">
+          <img src="/images/icon-youtube.svg" alt="" />
+          <h3>Nathan F.</h3>
+        </div>
+          <p class="social-count">8239</p>
+          <p class="social-followers">Subscribers</p>
+          <div class="social-increase">
+            <img src="/images/icon-down.svg" />
+            <p>144 Today</p>
           </div>
       </div>
 
@@ -82,8 +95,40 @@
     <!-- Follower Grid End -->
 
     <!-- Metrics Grid Start -->
-    <div class="metrics-grid">
-      
+    <div class="metrics-grid grid">
+      <h3>Overview - Today</h3>
+
+      <div class="metrics-grid-item">
+        <div class="metrics-views">
+          <h3>Page Views</h3>
+          <img src="/images/icon-facebook.svg" alt="" />
+        </div> 
+        <div class="metrics-score">
+          <p>87</p>
+          <div class="metrics-increase">
+            <img src="/images/icon-up.svg" />
+            <p>4%</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="metrics-grid-item">
+        <div class="metrics-views">
+          <h3>Page Views</h3>
+          <img src="/images/icon-facebook.svg" alt="" />
+        </div>
+          
+        <div class="metrics-views">
+          <p>87</p>
+          <div class="metrics-increase">
+            <img src="/images/icon-up.svg" />
+            <p>3%</p>
+          </div>
+        </div>
+      </div>
+
+
+
     </div>
     <!-- Metrics Grid End -->
 
