--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <body>
 
   <div class="container">
-    <!-- Wrapper Start -->
+    <!-- Container Start -->
+
     <div class="backdrop"></div>
     <div class="wrapper">
         <!-- Nav Start -->
@@ -223,15 +224,11 @@
       <!-- Metrics Grid End --> 
     </div>
 
-    <!-- Wrapper End -->
+    <!-- Container End -->
+    <div class="attribution">Coded with ❤️ by Shem</div>
   </div>
 
 <script src="index.js"></script>
 </body>
 </html>
 
-<!-- 
-  <div class="attribution">
-    Coded with ❤️ by Shem.
-  </div>
- -->
